--- a/Web/server/package.json
+++ b/Web/server/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@azure/storage-blob": "^12.6.0",
+    "atob": "^2.1.2",
     "body-parser": "^1.19.0",
+    "btoa": "^1.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
@@ -20,6 +22,7 @@
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.8.0",
     "stripe": "^8.165.0"
   },
   "devDependencies": {
